Change java version to 11 for support more projects